Add x86_64-linux platform to Gemfile.lock

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ services: docker
 
 before_install:
   - gem install bundler -v 2.2.33
+  - bundle config set --local deployment 'true'
+  - bundle config set --local jobs 3
   - docker-compose up --build -d
 
 script:
